--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^0.18.0",
     "jquery": "^3.4.0",
     "lodash.debounce": "^4.0.8",
+    "random-int": "^2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
