did most desktop static pages, added new vote_result page directory

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "fsevents": "^2.0.7",
     "jquery": "^3.4.0",
     "lodash.debounce": "^4.0.8",
     "random-int": "^2.0.0",
