--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "fsevents": "^2.0.7",
+    "http": "^0.0.0",
     "jquery": "^3.4.0",
     "lodash.debounce": "^4.0.8",
     "random-int": "^2.0.0",
@@ -54,6 +55,7 @@
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
   }
 }
