simple modal pop on socket diconnect, doesn't redirect to homepage currently

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "random-int": "^2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.8.1",
     "react-redux": "^7.0.2",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
